--- a/netlify.toml
+++ b/netlify.toml
@@ -82,6 +82,11 @@
     X-Robots-Tag = "index, follow"
 
 [[headers]]
+  for = "/blog-2/"
+  [headers.values]
+    X-Robots-Tag = "index, follow"
+
+[[headers]]
   for = "/mentions-legales.html"
   [headers.values]
     X-Robots-Tag = "index, follow"
@@ -139,6 +144,11 @@
 
 [[headers]]
   for = "/en/blog-2"
+  [headers.values]
+    X-Robots-Tag = "index, follow"
+
+[[headers]]
+  for = "/en/blog-2/"
   [headers.values]
     X-Robots-Tag = "index, follow"
 
